--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>4.11</junit.version>
+        <slf4j-api.version>1.7.7</slf4j-api.version>
         <javax.ws.rs-api.version>2.0</javax.ws.rs-api.version>
         <persistence-api.version>1.0.2</persistence-api.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
@@ -30,6 +31,11 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.persistence</groupId>
